erDiagram
    BUILDING ||--o{ BUILDING_ROOM : "has rooms"
    BUILDING ||--o{ EQUIPMENT     : "stocks (permanent home)"
    BUILDING ||--o{ REQUEST       : "hosts"

    BUILDING_ROOM ||--o{ REQUEST  : "reserved by (building_id, room)"

    EQUIPMENT_GROUP ||--o{ EQUIPMENT           : "contains units"
    EQUIPMENT_GROUP ||--o{ REQUESTED_EQUIPMENT : "requested as group"

    EQUIPMENT       ||--o{ REQUESTED_EQUIPMENT : "assigned unit"
    REQUEST         ||--o{ REQUESTED_EQUIPMENT : "line items"

    BUILDING {
        uint      id PK
        string    name
        bool      archived
        string    description "nullable"
        string    address     "nullable"
        time      created_at
        time      updated_at
    }

    BUILDING_ROOM {
        uint    building_id PK,FK "-> BUILDING.id"
        string  room        PK
    }

    EQUIPMENT_GROUP {
        uint    id PK
        string  name
        string  description "nullable"
        bool    disabled
        bool    archived
        time    created_at
        time    updated_at
    }

    EQUIPMENT {
        uint    id           PK
        string  name
        string  description  "nullable"
        bool    disabled
        bool    archived
        uint    group_id     FK "-> EQUIPMENT_GROUP.id (not null)"
        uint    building_id  FK "-> BUILDING.id (NOT NULL — permanent home)"
        time    created_at
        time    updated_at
    }

    REQUEST {
        uint    id                 PK
        string  name
        time    first_date_needed
        time    start_time
        time    end_time
        int     number_of_weeks
        int16   days_of_week       "enum: Mon..Sun"
        uint    building_id        FK "-> BUILDING.id"
        string  room               "part of composite FK -> BUILDING_ROOM"
        string  comments           "nullable"
        uint    attachment_id      "nullable, no FK yet"
        time    created_at
        time    updated_at
    }

    REQUESTED_EQUIPMENT {
        uint    id            PK
        uint    request_id    FK "-> REQUEST.id (not null)"
        uint    group_id      FK "-> EQUIPMENT_GROUP.id (not null, what was asked for)"
        uint    equipment_id  FK "-> EQUIPMENT.id (not null, what was assigned)"
    }
